--- a/FlightDocument/appsettings.json
+++ b/FlightDocument/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "DocumentAPI": "https://localhost:7126"
+    "DocumentAPI": "https://localhost:7126",
+    "AuthAPI": "https://localhost:7077"
   }
 }
